--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 Hello there, awesome person!
 <html>
   <head>
-    <title>How u doin???</title>
+    <title>My First webpage</title>
   </head>
   <body>
-    how r u?
+    How u doin ???
   </body>
 </html>
   
