--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ Hello there, awesome person!
   </head>
   <body>
     <h1>I'm a header 1!</h1>
-    How u doin ???
+<img src="https://avatars.githubusercontent.com/u/70676278?v=4">
+
   </body>
 </html>
   
