--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@ Hello there, awesome person!
   <body>
     <h1>I'm a header 1!</h1>
 <img src="https://avatars.githubusercontent.com/u/70676278?v=4">
+    <ol>
+      <li>buzzfeed</li>
+      <li>youtube</li>
+      <li>uniqlo</li>
+    
+    </ol>
 
   </body>
 </html>
