--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Hello there, awesome person!
       <li>buzzfeed</li>
       <li>youtube</li>
       <li>uniqlo</li>
-    
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
     </ol>
 
   </body>
