--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@ Hello there, awesome person!
     <title>My First webpage</title>
   </head>
   <body>
-    <h1>I'm a header 1!</h1>
+    <h1>hello people</h1>
 <img src="https://avatars.githubusercontent.com/u/70676278?v=4">
     <ol>
-      <li>buzzfeed</li>
-      <li>youtube</li>
-      <li>uniqlo</li>
-    <li><a href="https://github.com">This is a link to GitHub!</a></li>
+      <li><a href"https://www.buzzfeed.com/in">buzzfeed</a></li>
+      <li>uniqlo<a href="https://www.uniqlo.com/in/en/">uniqlo</a></li>
+    <li><a href="https://github.com">GitHub</a></li>
     </ol>
 
   </body>
