--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ Hello there, awesome person!
 <html>
   <head>
     <title>My First webpage</title>
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>hello people</h1>
